<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutPai"
        android:layout_width="729dp"
        android:layout_height="409dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:id="@+id/header"
            android:background="#1C1633"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <LinearLayout
                android:id="@+id/espacoEmBranco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="right">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btnSet1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#663EFF"
                    android:layout_weight="1"
                    android:text="@string/btnSetChoice1" />

                <Button
                    android:id="@+id/btnSet3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="#0A071A"
                    android:layout_weight="1"
                    android:backgroundTint="#663EFF"
                    android:text="@string/btnSetChoice2" />

                <Button
                    android:id="@+id/btnSet5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0A071A"
                    android:layout_weight="1"
                    android:backgroundTint="#663EFF"
                    android:text="@string/btnSetChoice3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtvSetAtual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/txtvSet"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#663EFF"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:text="@string/btnEditar"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/placar"
            android:background="@color/cardview_light_background"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:backgroundTint="#2A1B66"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="center">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginBottom="5dp">

                    <Button
                        android:id="@+id/btnMaisTime1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/btnMais"
                        android:backgroundTint="#663EFF"
                        android:layout_marginHorizontal="30dp"/>
                    <Button
                        android:id="@+id/btnMenosTime1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:visibility="invisible"
                        android:text="@string/btnMenos"
                        android:backgroundTint="#663EFF"
                        android:layout_marginHorizontal="30dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtvTime1"
                        android:textSize="25dp"
                        android:textColor="#663EFF"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btnPontosTime1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtvPontosTime1"
                        android:textSize="100dp"
                        android:textColor="#663EFF"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="center">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtvContra"
                        android:textSize="50dp"
                        android:textColor="#663EFF"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtvTime2"
                        android:textSize="25dp"
                        android:textColor="#663EFF"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btnPontosTime2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtvPontosTime2"
                        android:textSize="100dp"
                        android:textColor="#663EFF"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:gravity="center">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginBottom="5dp">
                    <Button
                        android:id="@+id/btnMaisTime2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#663EFF"
                        android:text="@string/btnMais"
                        android:layout_marginHorizontal="30dp"/>
                    <Button
                        android:id="@+id/btnMenosTime2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#663EFF"
                        android:text="@string/btnMenos"
                        android:layout_marginHorizontal="30dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contagemSets"
            android:background="#1C1633"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txtvSets"
                            android:textColor="#663EFF"
                            android:textSize="25dp"
                            android:textAlignment="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/txtvSetPontosTime1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txtvSetTime1"
                                android:textColor="#663EFF"
                                android:textSize="30dp"
                                android:textAlignment="center"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txtvContra"
                                android:textColor="#663EFF"
                                android:textSize="25dp"
                                android:textAlignment="center"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/txtvSetPontosTime2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txtvSetTime2"
                                android:textColor="#663EFF"
                                android:textSize="30dp"
                                android:textAlignment="center"
                                />
                            </LinearLayout>
                    </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>